# gal-id

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: pipeline.yml
apps/giapi/: Dockerfile  pyproject.toml  run.py
apps/giapi/giapi/: app.py  config.py
apps/giapi/giapi/learning/: model.py  runner.py  serializer.py
apps/giapi/giapi/preprocessing/: dataset.py  download.py
apps/giapi/giapi/routes/: learning.py  preprocessing.py
apps/giwebapp/: Dockerfile  pyproject.toml  run.py
apps/giwebapp/giwebapp/: api.py  app.py  assets.py  config.py  utils.py
apps/giwebapp/giwebapp/components/: tfboard.py
apps/giwebapp/giwebapp/pages/: evaluation.py  home.py  prediction.py  preprocessing.py  training.py
gcp/: commands.md  run.sh  startup.sh
libs/gicommon/: pyproject.toml
libs/gicommon/gicommon/: routes.py
libs/gicommon/gicommon/models/: base.py  learning.py  preprocessing.py
