[tool.poetry]
name = "giapi"
version = "0.3.0"
description = "GAL-iD api"
authors = ["Jonathan Langlois <jonathan.langlois@live.fr>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
psutil = "^5.8.0"
gicommon = {path = "../../libs/gicommon"}
pydantic = "^1.8.2"
python-decouple = "^3.5"
beanie = "^1.8.7"
h5py = "^3.6.0"
tensorflow = "^2.7.0"
Pillow = "^8.4.0"
sklearn = "^0.0"
zipp = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
